solved the issue #26

--- a/css/event.css
+++ b/css/event.css
@@ -223,11 +223,11 @@ body > section > div > p{
 }
 
 .des-text-apne{
-color:  white;
+color:  #e08383;
 }
 
 .date-Text{
- color: white;
+ color: #4dccc8;
 }
 
 /* .ak-nb{
