added css to alumni page

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@
     font-size: 20px;
     font-weight: 1000;
 }
-
+.aks{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 340px;
+}
 
 /* add light mode css here */
 
