#36 issue solved the-centinal
updated style.css

--- a/css/style.css
+++ b/css/style.css
@@ -694,9 +694,9 @@ hr {
     float: left;
 }
 
-.bug a{
+/* .bug a{
     color:#c9a68b !important;
-}
+} */
 .main-nav a {
     display: block;
     position: relative;
